--- a/css/filebrowser.css
+++ b/css/filebrowser.css
@@ -84,7 +84,8 @@ body {
 
 .sidebar-sticky {
   position: -webkit-sticky;
-  position: sticky;
+  _position: sticky;
+  position: fixed;
   top: 48px; /* Height of navbar */
   height: calc(100vh - 48px);
   padding-top: .5rem;
